# HelloWorld

./: .gitignore  HelloWorld.sln  LICENSE  README.md
HelloLib/: CMakeLists.txt  HelloLib.cpp  HelloLib.h  HelloLib.vcxproj  HelloLib.vcxproj.filters  pch.h
HelloWorld/AndroidStudio/app/: build.gradle.kts  build.gradle.kts.bak
HelloWorld/AndroidStudio/app/src/androidTest/java/com/logicmedia/helloworld/: ExampleInstrumentedTest.kt
HelloWorld/AndroidStudio/app/src/main/java/com/logicmedia/helloworld/: MainActivity.kt
HelloWorld/AndroidStudio/app/src/test/java/com/logicmedia/helloworld/: ExampleUnitTest.kt
HelloWorld/AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
HelloWorld/Linux/: CMakeLists.txt  main.cpp
HelloWorld/VisualStudio/Console/: HelloWorld.cpp  HelloWorldConsole.vcxproj
HelloWorld/VisualStudio/XML/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  HelloWorldXML.vcxproj  HelloWorldXML.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  packages.config
HelloWorld/XCode/App/HelloWorld/: ContentView.swift  HelloWorldApp.swift
HelloWorld/XCode/App/HelloWorld.xcodeproj/: project.pbxproj
HelloWorld/XCode/App/HelloWorldTests/: HelloWorldTests.swift
HelloWorld/XCode/App/HelloWorldUITests/: HelloWorldUITests.swift  HelloWorldUITestsLaunchTests.swift
HelloWorld/XCode/Watch/HelloWorld Watch App/: ContentView.swift  HelloWatch.h  HelloWatch.mm  HelloWorld Watch App-Bridging-Header.h  HelloWorldApp.swift
HelloWorld/XCode/Watch/HelloWorld Watch AppTests/: HelloWorld_Watch_AppTests.swift
HelloWorld/XCode/Watch/HelloWorld Watch AppUITests/: HelloWorld_Watch_AppUITests.swift  HelloWorld_Watch_AppUITestsLaunchTests.swift
HelloWorld/XCode/Watch/HelloWorld.xcodeproj/: project.pbxproj
HelloWorld/XCode/Watch/Include/: module.modulemap
Scripts/: BuildAppleAll.sh  BuildAppleDebug.sh  BuildLinuxAll.sh  BuildLinuxDebug.sh  BuildWindowsAll.cmd  BuildWindowsDebug.cmd
